Fix 'You must first log in' text alignment.

--- a/assets/styles/layouts/_signup.scss
+++ b/assets/styles/layouts/_signup.scss
@@ -1,8 +1,6 @@
 .mu_register.wp-signup-container {
    @extend .page-section;
    margin: rem(120) auto 0;
-   display: flex;
-   flex-direction: column;
 
    * {
      text-align: left;
